--- a/templates/header.html
+++ b/templates/header.html
@@ -81,6 +81,6 @@
     <span class="text-muted">v1.0</span>
   </div>
 </footer>
-    <script src="{{ url_for('static', path='/css/bootstrap.bundle.min.js') }}" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', path='/js/bootstrap.bundle.min.js') }}" crossorigin="anonymous"></script>
   </body>
 </html>
