avoid mixed content issues

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,15 +8,15 @@
     <title> - Useless Calculator - </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', path='/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ static_url('/css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', path='/images/apple-touch-icon.png') }}" sizes="180x180">
-    <link rel="icon" href="{{ url_for('static', path='/images/favicon-32x32.png') }}" sizes="32x32" type="image/png">
-    <link rel="icon" href="{{ url_for('static', path='/images/favicon-16x16.png') }}" sizes="16x16" type="image/png">
-    <link rel="manifest" href="{{ url_for('static', path='/images/manifest.json') }}" >
-    <link rel="mask-icon" href="{{ url_for('static', path='/images/safari-pinned-tab.svg') }}" color="#7952b3">
-    <link rel="icon" href="{{ url_for('static', path='/images/favicon.ico') }}" >
+    <link rel="apple-touch-icon" href="{{ static_url('/images/apple-touch-icon.png') }}" sizes="180x180">
+    <link rel="icon" href="{{ static_url('/images/favicon-32x32.png') }}" sizes="32x32" type="image/png">
+    <link rel="icon" href="{{ static_url('/images/favicon-16x16.png') }}" sizes="16x16" type="image/png">
+    <link rel="manifest" href="{{ static_url('/images/manifest.json') }}" >
+    <link rel="mask-icon" href="{{ static_url('/images/safari-pinned-tab.svg') }}" color="#7952b3">
+    <link rel="icon" href="{{ static_url('/images/favicon.ico') }}" >
     <meta name="theme-color" content="#7952b3">
 
 
@@ -38,7 +38,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', path='/css/sticky-footer-navbar.css') }}" rel="stylesheet">
+    <link href="{{ static_url('/css/sticky-footer-navbar.css') }}" rel="stylesheet">
   </head>
   <body class="d-flex flex-column h-100">
     
@@ -81,6 +81,6 @@
     <span class="text-muted">v1.0</span>
   </div>
 </footer>
-    <script src="{{ url_for('static', path='/js/bootstrap.bundle.min.js') }}" crossorigin="anonymous"></script>
+    <script src="{{ static_url('/js/bootstrap.bundle.min.js') }}" crossorigin="anonymous"></script>
   </body>
 </html>
